1999-11-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/mq2.c, scheduler/mq2auth.c:
	    More of the theme...

	* configure.in, utils/Makefile.in, utils/md5sum.c:
	    Initial attempt at writing (from scratch)a MD5SUM
	    program, but for some reason the result is *not* the
	    same as GNU textutils one gives :-/  Perhaps it will
	    not matter in the end, though..

	* scheduler/Makefile.in, scheduler/transport.c, scheduler/mq2.c,
	  scheduler/scheduler.h, scheduler/prototypes.h:
	    Some more work on MAILQ-V2; now needs fleshing out only
	    the real protocol interpreter at  mq2.c: mq2interpret(),
	    and corresponding things in the system..

	* utils/policy-builder.sh.in:
	    Some script tweaks; removed externally sourced 'bad source
	    addresses' list pickups.

1999-11-02  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* include/md5.h, libc/md5c.c:
	    Move call-interface renaming macro into more
	    appropriate place..

	* proto/cf/server.cf:
	    Rectify report codes for EXPN and VRFY.

	* smtpserver/smtpserver.c:
	    Don't do ident query when in interactive mode.

	* smtpserver/smtpserver.c, smtpserver/smtpserver.h:
	    Call  s_setup()  with appropriate fd's for input,
	    and output.  Sometimes we are *not* running with
	    bidirectional socket as the point of contact..

	* scheduler/scheduler.h, scheduler/scheduler.c, scheduler/mailq.c,
	  scheduler/prototypes.h, libc/md5c.c, scheduler/MAILQ-V2:
	    Initial steps to write an interactive command channel
	    via the MAILQ port.

1999-10-30  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/Makefile.in, smtpserver/smtpserver.c,
	  smtpserver/wantconn.c:
	    Reversed the effective kill of the tcp-wrapper after
	    the ./configure got a way not to link it in per default..

	* configure.in:
	    "--with-openssl" (or its more explicite cousins) must now
	       be used to have OpenSSL enabled at the system
	    "--with-tcp-wrappers" (or its more explicite cousins) must